# llm_chatbox

./: .gitignore  Cargo.toml  app.py  index.html  package-lock.json  package.json  pyvenv.cfg  requirements.txt
backend/src/: main.rs
backend/src/models/: chat.rs  mod.rs
backend/src/services/: chat.rs  deepseek.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AutoResizingInput.tsx
src/: App.tsx  index.css
src/handlers/: chat.rs  mod.rs
src/services/: mod.rs
static/: main.js
templates/: index.html
