[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum for HTTP server
axum = "0.6"

# Tower HTTP (with cors feature)
tower-http = { version = "0.4", features = ["cors"] }

tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"

# Serde + JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For DateTime (with serde)
time = { version = "0.3", features = ["serde-well-known"] }

# For generating UUID v4 and serializing Uuids
uuid = { version = "1.3", features = ["serde", "v4"] }

# For calling the DeepSeek R3 API
reqwest = { version = "0.11", features = ["json"] }

# NOTE: If you get version conflict warnings, adjust versions as needed.